add admin section and fix middleware bugs
